--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
         "@types/node": "^22.13.5",
         "@vue/cli-service": "^5.0.8",
         "@vue/eslint-config-typescript": "^14.3.0",
+        "autoprefixer": "^10.4.21",
         "eslint": "^9.17.0",
         "eslint-config-prettier": "^10.0.1",
         "eslint-plugin-vue": "^9.32.0",
+        "postcss": "^8.5.3",
         "prettier": "^3.4.2",
         "prettier-plugin-organize-imports": "^4.1.0",
         "prettier-plugin-tailwindcss": "^0.6.9",
@@ -28,7 +30,6 @@
         "@popperjs/core": "^2.11.8",
         "@vitejs/plugin-vue": "^5.2.1",
         "@vueuse/core": "^12.0.0",
-        "autoprefixer": "^10.4.20",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "concurrently": "^9.0.1",
