--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "vue-tsc": "^2.2.4"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.7.2",
         "@inertiajs/vue3": "^2.0.0-beta.3",
         "@popperjs/core": "^2.11.8",
         "@vitejs/plugin-vue": "^5.2.1",
