--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.7.2",
+        "@heroicons/vue": "^2.2.0",
         "@inertiajs/progress": "^0.2.7",
         "@inertiajs/vue3": "^2.0.0-beta.3",
         "@popperjs/core": "^2.11.8",
         "@vitejs/plugin-vue": "^5.2.1",
         "@vueuse/core": "^12.0.0",
+        "chart.js": "^4.4.9",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "concurrently": "^9.0.1",
