--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "@heroicons/vue": "^2.2.0",
         "@inertiajs/progress": "^0.2.7",
         "@inertiajs/vue3": "^2.0.0-beta.3",
+        "@mdi/font": "^7.4.47",
         "@popperjs/core": "^2.11.8",
         "@vitejs/plugin-vue": "^5.2.1",
         "@vueuse/core": "^12.0.0",
@@ -49,6 +50,7 @@
         "vite": "^6.2.0",
         "vue": "^3.5.13",
         "vue3-toastify": "^0.2.8",
+        "vuetify": "^3.8.2",
         "ziggy-js": "^2.5.2"
     },
     "optionalDependencies": {
